--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <style src=workoutlogger.css ></style>
-        <link rel="stylesheet" href="../styles.css">
+        <style src=styles.css ></style>
     <body><!-- Fixed navbar -->
     <nav class="site-header sticky-top py-1">
       <div
