--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <style src="workoutlogger.css" ></style>
-        <style src="styles.css" ></style>
-        <!-- <link rel="stylesheet" href="styles.css"> -->
-        <!-- <link rel="stylesheet" href="workoutlogger.css"> -->
+        <!-- <style src="workoutlogger.css" ></style> -->
+        <!-- <style src="styles.css" ></style> -->
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="workoutlogger.css">
     <body><!-- Fixed navbar -->
     <nav class="site-header sticky-top py-1">
       <div
