--- a/views/styles.css
+++ b/views/styles.css
@@ -86,3 +86,17 @@
 .overflow-hidden {
   overflow: hidden;
 }
+
+site-header {
+  background-color: rgba(0, 0, 0, .85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+.site-header a {
+  color: #999;
+  transition: ease-in-out color .15s;
+}
+.site-header a:hover {
+  color: #fff;
+  text-decoration: none;
+}
