--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,68 +1,42 @@
 <html>
     <head>
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
-        <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/4.0/examples/product/"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <!-- <style src="workoutlogger.css" ></style> -->
-        <!-- <style src="styles.css" ></style> -->
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="workoutlogger.css">
+        <style src=workoutlogger.css></style>
     <body><!-- Fixed navbar -->
-    <nav class="site-header sticky-top py-1">
-      <div
-        class="container d-flex flex-column flex-md-row justify-content-between"
-      >
-        <a class="py-2" href="index.html">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="d-block mx-auto"
-          >
-            <circle cx="12" cy="12" r="10"></circle>
-            <line x1="14.31" y1="8" x2="20.05" y2="17.94"></line>
-            <line x1="9.69" y1="8" x2="21.17" y2="8"></line>
-            <line x1="7.38" y1="12" x2="13.12" y2="2.06"></line>
-            <line x1="9.69" y1="16" x2="3.95" y2="6.06"></line>
-            <line x1="14.31" y1="16" x2="2.83" y2="16"></line>
-            <line x1="16.62" y1="12" x2="10.88" y2="21.94"></line>
-          </svg>
-        </a>
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Home</a>
-        <a
-          class="py-2 d-none d-md-inline-block"
-          href="./exercise-recommendations/exercise-recommendations.html"
-          >Workout Planner</a
-        >
-        <a
-          class="py-2 d-none d-md-inline-block"
-          href="./calculator/calculator.html"
-          >Calculator</a
-        >
-        <a
-          class="py-2 d-none d-md-inline-block"
-          href="https://workout-planner-200.herokuapp.com/"
-          >Workout logs</a
-        >
-        <!-- removed sign in to implement in future use -->
-        <!-- <a class="py-2 d-none d-md-inline-block" href="#">Sign In</a> -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- <a class="navbar-brand" href="#">Bootstrap theme</a> -->
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="https://bal-singh-sde.github.io/workout-planner-frontend/">Home</a></li>
+            <li><a href="https://bal-singh-sde.github.io/workout-planner-frontend/exercise-recommendations/exercise-recommendations.html">Workout Planner</a></li>
+            <li><a href="https://bal-singh-sde.github.io/workout-planner-frontend/calculator/calculator.html">Calculator</a></li>
+            <li><a href="/">Workout Logs</a></li>
+            <!-- <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li> -->
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </nav>
 
