--- a/views/index.ejs
+++ b/views/index.ejs
@@ -236,13 +236,13 @@
 
 
         <script src="/main.js"></script>
-        <script>
+        <!-- <script>
         if($("#myModal_update")){
           $("#bodypartSelect_now").attr("value", localStorage.getItem("bodyPart"))
           $("#date_now").attr("value", localStorage.getItem("date"))
           $("#workout_now").attr("value", localStorage.getItem("workout"))
           $("#Reps_Interval_now").attr("value", localStorage.getItem("Reps_Interval_now"))
         }
-        </script>
+        </script> -->
     <body>
 </html>
